[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandol"
version = "0.1.0"
description = "Memory-native hierarchical memory system for long-conversation agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mandol Team"},
]
keywords = ["memory", "agent", "llm", "rag", "semantic-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "networkx>=2.6",
    "rank-bm25>=0.2",
    "scikit-learn>=1.0",
    "pyyaml>=6.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
milvus = ["pymilvus>=2.3"]
neo4j = ["neo4j>=5.0"]
sentence-transformers = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
monitoring = ["psutil>=5.9"]
all = ["mandol[faiss,milvus,neo4j,sentence-transformers,openai]"]
dev = ["pytest>=7.0", "pytest-asyncio", "pre-commit", "ruff"]
docs = ["sphinx>=7.0", "furo", "myst-parser", "sphinxcontrib-mermaid"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mandol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
